# links

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONDUCT.md  CONTRIBUTING.md  README.md  chapter01.html  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  sitemap.xml  tmux.conf
.binder/: requirements.txt
_sources/: chapter01.ipynb  index.ipynb  index.md
_sources/info/: index.ipynb  typography.ipynb
_sources/python/: index.md
assets/css/: links.css
assets/js/: links.js  noindex.js
book/: _config.yml  index.md
docs/: CNAME  index.md
docs/assets/css/: links.css
docs/assets/js/: noindex.js
docs/python/: index.md
info/: index.html  typography.html
links/: python.md
python/: index.html
search/: search_index.json
